fixing alignment

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -5,7 +5,7 @@ body {
 }
 
 /*.wrap {
-    max-width: 1000px;
+    max-width: 1200px;
     position: relative;
 }*/
 
